[tool.poetry]
name = "fastapi-templates"
version = "0.1.0"
description = "templates and exercises"
authors = ["Your Name <ozieblo.michal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.108.0"
pydantic = "^2.5.3"
sqlalchemy = "^2.0.25"
uvicorn = "^0.25.0"
setuptools = "^69.0.3"
httpx = "^0.26.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
fastapi-security = {git = "https://github.com/cladden/fastapi-security.git"}
python-multipart = "^0.0.6"
bcrypt = "4.0.1"
stubs = "^1.0.0"
alembic = "^1.13.1"
slowapi = "^0.1.8"
boto3 = "^1.34.23"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
pytest = "^7.4.4"
pylama = "^8.4.1"
ruff = "^0.1.11"
isort = "^5.13.2"
mypy = "^1.8.0"
pytest-asyncio = "^0.23.3"
moto = "^4.2.13"
docker = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
